# simple-bencode

./: LICENSE  README.md  pyproject.toml
src/simple_bencode/: __init__.py
tests/: test_init.py
